# agent-triage

./: .dockerignore  .env.example  .env.openhands.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  triage.db
.github/workflows/: ci.yml  triage.yml
dashboard/: next.config.js  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: CardModal.tsx
dashboard/lib/: api.ts  demoData.ts
data/gold/: demo_gold.jsonl  sdk_bash_gold.jsonl
data/traces/: demo_runs.jsonl  example_run.json  new_cards.jsonl
docs/: ANTIGRAVITY_PROMPTS.md  DESIGN.md  EVAL_NOTES.md  RUNBOOK_OPENHANDS.md  WRITEUP.md
scripts/: cluster_other.py  discover_rules.py  generate_fixtures.py  iaa_report.py  ingest_openhands.py  label_gold.py  run_swebench_batch.sh  run_swebench_sdk.py  run_swebench_smoke.py  run_swebench_smoke.sh
src/agent_triage/: __init__.py  cli.py
src/agent_triage/api/: app.py
src/agent_triage/engine/: card.py  classifier.py  compaction.py  signals.py
src/agent_triage/eval/: calibration.py  gold.py  metrics.py  runner.py
src/agent_triage/harness/: aider_adapter.py  autocoderover_adapter.py  openhands_adapter.py  swebench_adapter.py
src/agent_triage/llm/: provider.py
src/agent_triage/schema/: trace.py
src/agent_triage/taxonomy/: categories.py
tests/: conftest.py  test_adapters.py  test_core.py  test_integration.py
