[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-triage"
version = "0.1.0"
description = "Failure triage and root-cause analysis for autonomous coding-agent runs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Syed Shabeeb" }]
keywords = ["ai-agents", "observability", "root-cause-analysis", "swe-bench", "devin"]
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
triage = "agent_triage.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_triage"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = false
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"scripts/*" = ["E501"]
